<resources>
    <string name="app_name">AppArchiLog</string>
    <string name="emailOrPasswdEmpty">"Please enter email and password."</string>
    <string name="successConnection">"Successfully connected."</string>
    <string name="open_nav">Open navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_after_login">AfterLoginActivity</string>
    <string name="apiKey">AIzaSyBKxBIMojqm3b0ei5-8Pq6oAK_5-74Wxw0</string>
    <string name="title_activity_vacation">Vacation</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="welcome">Welcome</string>
    <string name="text_welcome">Bienvenue dans notre application de planification des vacations !</string>
    <string name="action_continuous">Continuer</string>
    <string name="login">Login</string>
    <string name="sign_in">Se connecter</string>
    <string name="sign_in_google">Continuer avec Google</string>
    <string name="not_yet_sign_up">Pas encore inscrit(e) ? S\'inscrite</string>
    <string name="server_client_id">307112219205-kgsdl47uri7ph73ljtg0tiojv4v9va1u.apps.googleusercontent.com</string>
    <string name="register">S\'inscrire</string>
    <string name="already_sign_in">Déjà inscrit(e)? Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="first_name">Prenom</string>
    <string name="last_name">Nom</string>
    <string name="email">Adresse e-mail</string>
    <string name="btn_register">S\'inscrire</string>
    <string name="btn_enregister">Enregistrer</string>
    <string name="account_name">Android Knowledge</string>
    <string name="account_email">contact@androidknowledge.com</string>
    <string name="vacation_name">Vacation Name</string>
    <string name="description">Description</string>
    <string name="start_date_end_date">Start Date - End Date</string>
    <string name="location">Location</string>
    <string name="name">Nom</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="select_place">Select Place</string>
    <string name="place_details">Place Details</string>
    <string name="create_vacation">Enregistrer Vacance</string>
    <string name="add">Add</string>
    <string name="vacations">Vacances</string>
    <string name="activity">Activités</string>
    <string name="todo">TODO</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="add_vacation">"Ajouter "</string>
    <string name="google_place_apiKey">AIzaSyCX2SXNkXA-l7VxsId7gbGM65SHzWfJ0Jw</string>
    <string name="google_map_apiKey">AIzaSyBoFv-RBWvtcvBPqjfJ6jpo5yH15K6o-no</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id
        interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales
        nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
        himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet,
        imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a
        condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut
        sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros
        porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl
        nec dolor bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at,
        mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt
        nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id.
        Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse
        sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor
        sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor
        varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris.
        Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non
        viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat
        diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
        egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer
        dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec
        maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce
        dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="status">Status</string>
    <string name="add_participant">"Ajouter un participant "</string>
    <string name="participants">Participants</string>
    <string name="activities">Activities</string>
    <string name="create_activity">Enregistrer l\'activité</string>
    <string name="delete_participant">Supprimer</string>
    <string name="activity_name">Activity name</string>
    <string name="participant_name">Participant Name</string>
    <string name="participant_prenom">Participant Prenom</string>
    <string name="text_confirm">Est vous de vouloire supprimer?</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Cancel</string>
    <string name="ajouter">Ajouter</string>
    <string name="text_info">Veuillez remplir les informations ci-dessous</string>
    <string name="select_vacation">Selectionnée une période de vacance</string>
    <string name="edit">Editer</string>
    <string name="logout">Se déconnecter</string>
    <string name="weather_forecast">Prévisions météo</string>
    <string name="humidity">Humidité:</string>
    <string name="humidity_icon">Humidity Icon</string>
    <string name="wind_speed">Vitesse du vent:</string>
    <string name="pressure">Pression:</string>
    <string name="sunrise_icon">Sunrise Icon</string>
    <string name="add_to_calendar">Ajouter dans le calendrier</string>
    <string name="agenda">Agenda</string>
    <string name="text_doc">Choisir un document pour une période de vacance</string>
    <string name="select_file">Clicquez et Selectionnez un fichier</string>
    <string name="upload_pdf">Télécharger</string>
    <string name="joindre">Joindre</string>
    <string name="message">Message</string>
    <string name="write_message">Message</string>
</resources>