<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#80000000"
                android:padding="16dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/popupbd"
            android:padding="16dp"
            android:elevation="8dp"
            android:layout_centerInParent="true"
            android:layout_margin="16dp">

        <TextView
                android:id="@+id/tvConfirmationMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/text_confirm"
                android:textColor="#313133"
                android:textSize="16sp"
                android:layout_marginBottom="24dp"
              />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

            <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:padding="8dp"
                    android:textColor="@color/primary"
                    android:layout_marginEnd="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true" />

            <TextView
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textColor="@android:color/white"
                    android:padding="8dp"
                    android:background="@drawable/btnbg"
                    android:clickable="true"
                    android:focusable="true" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
