<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/back_ground"
    tools:context=".views.WelcomeActivity">

  <RelativeLayout
      android:id="@+id/welcome"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/screen_back"
      android:elevation="20dp"
      android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="124dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="101dp"
        android:textAlignment="center"
        android:text="@string/welcome"
        android:textColor="@color/material_dynamic_primary10"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="0dp"
        android:elevation="4dp"
        android:textAlignment="center"
        android:padding="12dp"
        android:text="@string/text_welcome"
        android:textColor="#333333"
        android:textSize="26sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/continuousButton"
        android:layout_below="@+id/welcomeTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="34dp"
        android:contentDescription="Vacation"
        android:src="@mipmap/ic_vacantion_foreground" />

    <Button
        android:id="@+id/continuousButton"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="136dp"
        android:gravity="center"
        android:background="@drawable/rounded_button"
        android:padding="12dp"
        android:text="@string/action_continuous"
        android:textColor="@android:color/white" />
    <!--<Button
        android:id="@+id/registerButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/rounded_button"
        android:padding="12dp"
        android:text="@string/action_sign_up"
        android:textColor="@android:color/white" />-->

  </RelativeLayout>
</ScrollView>

