<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_ground"
        tools:context=".fragments.DetailsVacationFragment">

    <!-- Main content layout -->

    <!-- Bottom navigation and FloatingActionButton -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">
                <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        style="?android:attr/progressBarStyleLarge"
                        android:indeterminate="true"
                        android:layout_centerInParent="true"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="0.538"/>
                <!-- Vacation details card -->

                <androidx.cardview.widget.CardView
                        android:id="@+id/cardCM"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                        <!-- Nom de la Vacance -->
                        <TextView
                                android:id="@+id/tvVacationName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vacation_name"
                                android:textStyle="bold"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                                android:textColor="@android:color/black"
                                android:layout_marginBottom="8dp"/>

                        <!-- Description de la Vacance -->
                        <TextView
                                android:id="@+id/tvVacationDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/description"
                                android:textSize="17sp"
                                android:textColor="@android:color/darker_gray"
                                android:layout_marginBottom="8dp"/>

                        <!-- Dates de la Vacance -->
                        <TextView
                                android:id="@+id/tvVacationPeriod"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/start_date_end_date"
                                android:textSize="14sp"
                                android:textColor="@android:color/holo_blue_dark"
                                android:layout_marginBottom="8dp"/>
                        <!-- Localisation de la Vacance -->
                        <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginBottom="8dp">

                            <!-- Le Statut de la Vacance -->
                            <TextView
                                    android:id="@+id/tvVacationPlace"
                                    android:layout_width="wrap_content"
                                    android:layout_height="20dp"
                                    android:text="@string/location"
                                    android:textSize="13sp"
                                    android:textColor="@android:color/holo_green_dark"
                                    android:layout_marginTop="5dp"
                                    android:layout_alignParentStart="true"
                                    android:layout_marginStart="0dp"/>
                            <TextView
                                    android:id="@+id/tvVacationStatus"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/status"
                                    android:textSize="11sp"
                                    android:textColor="@android:color/white"
                                    android:padding="4dp"
                                    android:layout_gravity="end|center"
                                    android:layout_alignParentEnd="true"
                                    android:layout_marginEnd="8dp"/>
                        </RelativeLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <!-- Participants section -->
                <TextView
                        android:id="@+id/tvParticipants"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/participants"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/cardCM"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewParticipants"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/tvParticipants"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                <!-- Activities section -->
                <Button
                        android:id="@+id/btnAddParticipant"
                        android:layout_width="246dp"
                        android:layout_height="12dp"
                        android:text=""
                        android:background="@drawable/rounded_button"
                        android:elevation="20dp"
                        android:padding="0dp"
                        android:textColor="@android:color/white"
                        app:layout_constraintTop_toBottomOf="@+id/recyclerViewParticipants"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="12dp"
                        app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                        android:id="@+id/tvActivities"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activities"
                        android:textStyle="bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/btnAddParticipant"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewActivities"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/tvActivities"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <!-- Floating action button for adding an activity -->

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/colorAccent"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="90dp"/>

    <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            app:fabCradleMargin="5dp"
            app:fabCradleRoundedCornerRadius="50dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomVacationNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_vacation_menu"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
